消费多个事件